Fix image alignment

--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -214,14 +214,18 @@
 .container{
     border: 1px solid #ccccc;
     text-align: center;
+    vertical-align: top; 
 }
+
+
+
 .category{
     display: inline-block;
     width: 200px;
     height: 200px;
-    background: #ccccc;
-    margin: 5px;
+    vertical-align:top;
 }
+
 
 
 	@include color-typography;
